--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -1,22 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contoso Task Pane Add-in</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <script src="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/js/fabric.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.min.css" />
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.components.min.css" />
-    <script src="js/script.js" type="text/javascript"></script>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/10.0.0/css/fabric.min.css" />
 </head>
-<body class="ms-Fabric" dir="ltr">
-    <button class="ms-Button  ms-Button--hero" id="insert-icon">
-        <span class="ms-Button-icon">
-            <i class="ms-Icon ms-Icon--Add"></i>
-        </span>
-        <span class="ms-Button-label">Insert Icon</span>
-    </button>
-</body>
+    <body class="ms-Fabric ms-font-m">
+        <app-home></app-home>
+    </body>
 </html>
