Updated application headers

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-js/1.4.0/css/fabric.components.min.css" />
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/10.0.0/css/fabric.min.css" />
 </head>
-    <body class="ms-Fabric ms-font-m">
+    <body class="ms-Fabric ms-font-m ms-normalize">
         <app-home></app-home>
     </body>
 </html>
